deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interactive-raft
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
